style: fix z-index

--- a/styles/AccountSidebar.module.scss
+++ b/styles/AccountSidebar.module.scss
@@ -17,7 +17,7 @@
   }
 
   @media screen and (max-width: 991px) {
-    z-index: 10;
+    z-index: 50;
     width: 0;
   }
 
